add api manage customer
